# 3DGS-No-PyTorch

./: .gitignore  CMakeLists.txt  ColmapLoader.cpp  ImageIO.cpp  ImageIO.h  Makefile  README.md  auxiliary.cuh  densification.cu  densification.cuh  forward.cu  plyIO.h  scene.cuh  ssim.cuh  train.cu  trainer.cu  trainer.cuh
include/: ColmapLoader.h  Dataset.cuh  ImageIO.h  adam.cuh  auxiliary.cuh  backward.cuh  camera.h  checkpoint.cuh  config.h  cuda_buffer.cuh  debug_utils.cuh  densification.cuh  forward.cuh  optimizer.cuh  plyIO.h  rasterizer.cuh  rasterizer_impl.cuh  renderer.cuh  scene.cuh  trainer.cuh
src/: ColmapLoader.cpp  ImageIO.cpp  adam.cu  backward.cu  densification.cu  forward.cu  rasterizer_impl.cu  renderer.cu  ssim.cu  train.cu  trainer.cu  viewer.cu
